drupal/profiles/takepart/themes/takepart3/css/style.css
/* ... */
#slim-header ul.menu li a {
    background: none;
    color: #000;
    background: url('../images/dot-bbg.png') no-repeat 0 7px;
    padding: 0 7px 0 12px;
    white-space:nowrap;
}
#slim-header ul.menu li.first a {
    background-image: none;
    padding-left: 0;
}
/* homepage features block */
body.front .main-content .block-boxes-current-promo {
    margin:0 0 20px 0;
    padding-bottom:15px;
}

ul.dots li {
    cursor:pointer;
}

a {
    text-decoration:none;
    color:#1CA9E7;
}

a:hover {
    text-decoration:underline;
}

.front .page{
    padding: 25px 20px 35px;
}

/*logo style*/
#logo {
    float: left;
    width:  125px;
    padding: 0;
    position: absolute;
    top: 20px;
    left: 0px;
}

/*page structure*/
#page-wrapper {
    margin: 0px auto 0;
    width:1000px;
}

#header {
    margin:0;
    position:relative;
}

#header-wrapper {
    margin:0;
    position:relative;
    height:120px;
}

#page {
    background:#FFF;
    clear:both;
}

.page {
    padding:35px 20px;
}

.node-type-takepart-campaign #page.page-multipage {
    padding-left:10px;
}

.main-content {
    width:640px;
    float:left;
}

#footer {
    background: none repeat scroll 0 0 #FFFFFF;
    margin-bottom: 0;
    overflow: auto;
    padding: 0 20px;
    width: 960px;
}

body.page-iframes-footer #footer {
    margin:0 auto;
}
.footer-column-wrapper div.links {
    display:none;
}

.col-140 {
    width:140px;
}

.col-460 {
    width:460px;
}

body.two-sidebars #left-rail,
body.sidebar-first #left-rail {
    display:inline-block;
    margin:0;
    padding-left: 0;
    width:145px;
}

body.two-sidebars #content, body.sidebar-first #content {
    display: inline-block;
    margin-left: 155px;
    margin-right: -644px;
    vertical-align: top;
    width: 480px;
}

.header-right {
    width:878px;
    float:left;
    margin-left:124px;
}

.header-right .row2 {
    clear:  both;
    padding-top: 2px;
}

#nav-wrap {
    margin: 0 0 5px 0;
    float: left;
}
.header-right #nav-wrap {
    margin: 0 0 10px 0;
    float: left;
}

.field-name-field-tp-campaign-intro-media {
    display: block;
    margin-bottom: 0;
}

.main-content {
    width:640px;
}

/* tag formatting */
/* reset default padding and margin: */
ul,ol,li,h1,h2,h3,h4,h5
{
    margin:0;
    padding:0;
}

p {
    font-size: 14px;
    line-height: 24px;
    margin: 0 0 1em 0;
    color:#000;
}
p.last {
    margin-bottom: 0;
}

h3 {
    color: #000;
    font-size: 16px;
    line-height: 120%;
    margin-bottom: 4px;
}

.view-campaigns.view-dom-id-2 .view-content ul li,
.view-campaigns.view-dom-id-3 .view-content ul li {
    display: inline-block;
    margin: 0 0 30px 7px;
    padding: 0;
    vertical-align: top;
    width: 150px;
}

.view-campaigns.view-dom-id-2 .view-content ul,
.view-campaigns.view-dom-id-3 .view-content ul{
    margin-bottom: 0;
    margin-left: -12px;
    margin-top: 0;
    padding: 0;
}
/* list-item markers should appear inside */
ul,ol {
    list-style:inside;
}

/* floating rules */
.clear {
    clear:both;
}

.clearfix:after {
    content:".";
    display:block;
    height:0;
    clear:both;
    visibility:hidden;
}

.clearfix {
    display:inline-block;
}

.clearfix {
    display:block;
}

/* remove link outlines on older versions of firefox */
:-moz-any-link:focus
{
    outline:none;
}

.block-boxes-current-slide_rotator {
    margin-bottom: 20px;
}
/*slideshow rotator text block*/
.views-field-field-slide-headline-override
{
    color:#000;
    margin-top:-88px;
}

/*slideshow rotator text block href, height 85px*/
.views-field-field-slide-headline-override .field-content a
{
    padding: 16px 124px 16px 16px;
    text-decoration:none;
    height:52px;
    background:url('../images/2012-02-08/white_transparency.png') transparent;
    color:#000;
    line-height:24px;
    font-size:24px;
    display:inline-block;
    width: 500px;
    font-weight:bold;
}

.views-field-field-slide-headline-override .field-content a:hover
{
    color:#1CA9e7;
}

/*image rotator dot styles
@todo: styles may need to be adjusted for IE:*/
.views-field-field-slide-headline-override .field-content ul.dots
{
    margin:-79px 8px;
    padding:0;
    position:absolute;
    right:0;
}

.views-field-field-slide-headline-override .field-content ul.dots li
{
    text-align:left;
    float:left;
    list-style:none;
    padding:3px 8px;
    margin:5px;
    height:16px;
}

.views-field-field-slide-headline-override .field-content ul.dots li.active {
    background:url('../images/2012-02-08/blue_dot.png') no-repeat scroll 0 0 transparent;
}

.views-field-field-slide-headline-override .field-content ul.dots li.inactive {
    background:url('../images/2012-02-08/white_dot.png') no-repeat scroll 0 0 transparent;
}

/*image rotator gallery arrow styles*/
#views_slideshow_controls_text_photo_gallery-block
{
    width:640px;
    left:0;
    height:68px;
    top:180px;
    position:absolute;
}

#views_slideshow_slide_counter_photo_gallery-block
{
    display:none;
}

#views_slideshow_controls_text_next_photo_gallery-block,#views_slideshow_controls_text_previous_photo_gallery-block
{
    cursor:pointer;
    width:40px;
    display:block;
    height:68px;
}

#views_slideshow_controls_text_next_photo_gallery-block a,#views_slideshow_controls_text_previous_photo_gallery-block a
{
    display:none;
}

#views_slideshow_controls_text_previous_photo_gallery-block
{
    background:transparent url("../images/2012-02-08/gallery_left_arrow.png") no-repeat scroll 0 0;
    float:left;
}

#views_slideshow_controls_text_next_photo_gallery-block
{
    background:transparent url("../images/2012-02-08/gallery_right_arrow.png") no-repeat scroll 0 0;
    float:right;
}

#block-menu-block-1 {
    padding: 4px 0 0;
    float: left;
    height: 30px;
    width: 676px;
    overflow: visible;
}
/* ... */

